<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.FirstScreenActivity">

    <ImageView
        android:id="@+id/imageViewLogin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_login" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/edit_text_custom"
        android:hint="@string/Name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogin" />

    <EditText
        android:id="@+id/editTextPalindrome"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_custom"
        android:hint="@string/Palindrome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextName" />

    <Button
        android:id="@+id/checkButton"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_custom"
        android:text="@string/check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPalindrome" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_custom"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>